- includes changes backported from mfaktc 0.24.0

new features:
- added two new configuration options
  - TimestampOnSameLine allows the timestamp to be printed on the same line
    as the result
  - ResultsFileTimestampInterval configures how many seconds must pass before
    mfaktc records a new timestamp, similar to Prime95

enhancements:
- improved program output in various places

version 0.23.6
==============================
- includes changes backported from mfaktc 0.24.0

enhancements:
- updated mul_96() to use 64-bit integers (thanks to NStorm)
  - users should see a small performance increase with CUDA 12.x and above

bug fixes:
- fixed some typos in code comments and program output

build:
- added CUDA 13.x support (thanks to NStorm)
  - breaking change: compute capability 7.2 and below are dropped

other changes:
- code has been revamped to improve formatting and maintain consistent style
  (thanks to NStorm)
- updated print_dez96() to use int96 data type (thanks to NStorm)
  - converted some hard-coded values to macros

version 0.23.5
==============================
- includes changes backported from mfaktc 0.24.0

bug fixes:
- added build flags to enable support for Blackwell devices by default in
  Makefile.win (thanks to yellowbeeblackbee)

build:
- enabled more compiler optimizations by default for a slight performance gain
  (thanks to NStorm)
- various improvements to GitHub Actions workflows (thanks to NStorm)
  - support for additional CUDA versions
  - removed dependency on deprecated windows-2019 images
  - code analysis with CodeQL
- improved visual appearance and clarity of release information (thanks to
  Danny Chia)
- added CUDA 12.9 support in GitHub Actions (thanks to NStorm)

other changes:
- re-organized mfaktc.ini to be more user-friendly (thanks to James Heinrich)

version 0.23.4
==============================
- includes changes backported from mfaktc 0.24.0

bug fixes:
- fixed typos and formatting in output