@@ -208,7 +208,7 @@ ResultsFileTimestampInterval=1
 #  %p - percent complete (%)           "%5.1f"
 #  %g - GHz-days/day (GHz)             "%8.2f"
 #  %t - time per class (s)             "%6.0f" / "%6.1f" / "%6.2f" / "%6.3f"
-#  %e - eta (d/h/m/s)                  "%2dm%02ds" / "%2dh%02dm" / "%2dd%02dh"
+#  %e - ETA (d/h/m/s)                  "%2dm%02ds" / "%2dh%02dm" / "%2dd%02dh"
 #  %E - elapsed (d/h/m/s)              "%2dm%02ds" / "%2dh%02dm" / "%2dd%02dh"
 #  %n - number of candidates (M/G)     "%6.2fM"/"%6.2fG"
 #  %r - rate (M/s)                     "%6.2f" / "%6.1f"
@@ -240,7 +240,7 @@ ProgressFormat=%d %T | %C %p%% | %t  %e |  %g  %s  %W%%
 #ProgressFormat=%C/4620 |    %n | %ts | %e | %rM/s |     %s |  %W%%
 
 # print everything
-#ProgressHeader=[date    time]  exponent [TF bits]: percent  class #, seq    |     GHZ |    time |    ETA |    #FCs |      rate | SieveP. | CPU wait | V5UserID@ComputerID
+#ProgressHeader=[date    time]  exponent [TF bits]: percent  class #, seq    |     GHz |    time |    ETA |    #FCs |      rate | SieveP. | CPU wait | V5UserID@ComputerID
 #ProgressFormat=[%d %T] M%M [%l-%u]: %p%% %C/4620,%c/960 | %g | %ts | %e | %n | %rM/s | %s |  %W%% | %U@%H
 
 
